<resources>
    <string name="app_name">APMV_Fragments</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hola_soy_el_fragment_agua">¡HOLA! SOY EL FRAGMENT AGUA</string>
    <string name="volver">VOLVER</string>
    <string name="vengo_del_elemento_n">VENGO DEL ELEMENTO: \n</string>
    <string name="este_mensaje_aparecer_en_aire">Este mensaje aparecerá en Aire</string>
    <string name="sin_mensaje">Sin mensaje</string>
    <string name="hello_tierra_fragment">hello_tierra_fragment</string>
</resources>