<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/earthMain"
    tools:context=".FragmentTierra">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="718dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="¡HOLA SOY EL FRAGMENT TIERRA!"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="388dp"
            />


        <TextView
            android:id="@+id/anteriorElemento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/vengo_del_elemento_n"
            android:textSize="30sp"
            android:textColor="@color/earthHighlight"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/inputMensaje"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/este_mensaje_aparecer_en_aire"

            android:background="@color/earthHighlight"
            android:textColor="@color/white"
            android:textColorHint="@color/grey"
            />

        <TextView
            android:id="@+id/mensaje"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/sin_mensaje"
            android:textSize="20sp"
            android:textColor="@color/earthHighlight"
            android:textStyle="bold"
            android:textAlignment="center"
            />


        <Button
            android:id="@+id/returnButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/volver"
            android:textSize="40sp"
            android:textColor="@color/white"

            android:backgroundTint="@color/earthHighlight"
            />

    </LinearLayout>

</FrameLayout>


    <!-- TODO: Update blank fragment layout -->





