<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentAgua"
    android:background="@color/aguaClaro"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"

            android:layout_marginTop="30dp"

            android:text="@string/hola_soy_el_fragment_agua"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/water"
            />

        <TextView
            android:id="@+id/anteriorElemento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"

            android:text="@string/vengo_del_elemento_n"
            android:textSize="30sp"
            android:textColor="@color/aguaOscuro"
            android:textStyle="bold"
            />
    </LinearLayout>

    <Button
        android:id="@+id/returnButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"

        android:text="@string/volver"
        android:textSize="40sp"
        android:textColor="@color/white"
        app:cornerRadius="0dp"
        android:backgroundTint="@color/aguaOscuro"
        />

</FrameLayout>

