<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    tools:context=".FragmentFuego">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:id="@+id/fireLin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="This is the Fire element!\nWoah so crazy"
            android:textAlignment="center"
            android:textColor="@color/red2"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            />

        <ImageView
            android:id="@+id/fireImg"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:src="@drawable/fire"
            android:layout_marginTop="10dp"
        />

        <TextView
            android:id="@+id/anteriorElemento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/vengo_del_elemento_n"
            android:textSize="30sp"
            android:textColor="@color/red2"
            android:textStyle="bold"
        />

        <EditText
            android:id="@+id/inputMensaje"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/este_mensaje_aparecer_en_aire"

            android:background="@color/red2"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            />


        <TextView
            android:id="@+id/mensaje"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/sin_mensaje"
            android:textSize="20sp"
            android:textColor="@color/red2"
            android:textStyle="bold"
            android:textAlignment="center"
            />


        <Button
            android:id="@+id/returnButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/volver"
            android:textSize="40sp"
            android:textColor="@color/white"

            android:backgroundTint="@color/red2"
            />
    </LinearLayout>

</FrameLayout>